--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "hubot-help": "^0.2.2",
     "hubot-maps": "0.0.3",
     "hubot-pugme": "^0.1.1",
+    "hubot-reload-scripts": "^0.1.4",
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.4.0",
-    "hubot-reload-scripts": "^0.1.4"
+    "hubot-telegram": "^0.1.2"
   },
   "engines": {
     "node": "0.10.x"
